# tensorflow_lite_lib

./: CMakeLists.txt  README.md  copy_files.sh  test_build.sh
